fix: Separate PostGIS initialization from setup queries
- Created postgis_init.sql: Minimal init script for Docker (only creates extensions)
- Kept postgis_setup.sql: Manual execution after pipeline (queries depend on tables)
- Updated docker-compose.yml to use postgis_init.sql instead of postgis_setup.sql
- Added documentation headers explaining proper workflow
- Fixes container startup error: 'relation citizens does not exist'

Workflow:
  1. docker compose up -d (uses postgis_init.sql)
  2. docker compose exec pipeline python main.py
  3. (optional) docker compose exec postgis psql -U esteira_user -d esteira_geo -f postgis_setup.sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./pipeline/postgis_setup.sql:/docker-entrypoint-initdb.d/01_init.sql
+      - ./pipeline/postgis_init.sql:/docker-entrypoint-initdb.d/01_init.sql
     networks:
       - esteira-network
     healthcheck:
