fix: Correct Docker file structure and COPY paths
- Updated Dockerfile to copy pipeline files directly to /app/ (not /app/pipeline/)
- Copy structure: *.py  /app/, etl/  /app/etl/, data/  /app/data/
- Removed conflicting volume mount ./pipeline:/app/pipeline from docker-compose.yml
- Now main.py is directly executable as: python main.py (from /app/)
- Fixes error: python: can't open file '/app/main.py': [Errno 2] No such file

Docker execution now:
  docker compose exec pipeline python main.py

--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -23,9 +23,10 @@ COPY pipeline/requirements.txt .
 # Instalar Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código do pipeline
-COPY pipeline /app/pipeline
-COPY pipeline/etl /app/pipeline/etl
+# Copiar código do pipeline (copia conteúdo, não a pasta)
+COPY pipeline/*.py ./
+COPY pipeline/etl ./etl
+COPY pipeline/data ./data
 
 # Criar diretórios para dados
 RUN mkdir -p /data/bronze /data/silver /data/gold /app/logs
