fix: Remove problematic COPY for data dir in Dockerfile
- Removed COPY pipeline/data ./data (Docker build context issue)
- Added volume mount ./pipeline/data:/app/data in docker-compose
- Data files now mounted via volume instead of copied during build
- Pipeline references /app/data which is mounted from host ./pipeline/data
- Fixes Docker build error: failed to calculate checksum of ref

Volume structure:
  Host: ./pipeline/data/ (CSV + GeoJSON files)
  Container: /app/data/ (mounted)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       RDS_PASSWORD: esteira_local_2025
       PYTHONUNBUFFERED: 1
     volumes:
+      - ./pipeline/data:/app/data
       - pipeline_bronze:/data/bronze
       - pipeline_silver:/data/silver
       - pipeline_gold:/data/gold
