fix: Fix Bronze layer save paths and directory permissions
- Changed bronze_loader.save_to_geoparquet() to use LOCAL_BRONZE_PATH (/data/bronze/)
- Files generated by pipeline now saved in /data/bronze/ (volume with permissions)
- Added chmod 755 for /app/data (input CSV/GeoJSON) in Dockerfile
- Added mkdir +chown for all data directories to fix permissions
- User 'esteira' (uid 1000) now owns /app and /data directories
- Fixes PermissionError: [Errno 13] Failed to open local file 'data/flooding_areas_porto_alegre.parquet'

--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -28,8 +28,8 @@ COPY pipeline/*.py ./
 COPY pipeline/etl ./etl
 
 # Criar diretórios para dados e logs
-RUN mkdir -p /data/bronze /data/silver /data/gold /app/logs && \
-    chmod -R 755 /app/logs
+RUN mkdir -p /data/bronze /data/silver /data/gold /app/logs /app/data && \
+    chmod -R 755 /app/logs /app/data
 
 # Def user para rodar pipeline
 RUN useradd -m -u 1000 esteira && \
